# sera

./: .gitignore  README.md
src/behaviour/: README.md  robot.py
src/behaviour/ballsim/: package.xml
src/behaviour/launch/: robot.launch
src/behaviour/src/: data.csv  robot.py
src/behaviour/state_machine/: CMakeLists.txt  package.xml
src/movimento/: README.md
src/movimento/robot_moves/: CMakeLists.txt  package.xml
src/movimento/robot_moves/msg/: Behav_mov.msg
src/movimento/robot_moves/src/: simple_moves.cpp  simple_moves.h  simple_moves.hpp  test_publisher.cpp
src/movimento/robot_moves/srv/: get_float.srv  set_float.srv
src/simulacao/butter_robot_edrom_version/: CMakeLists.txt  package.xml
src/simulacao/butter_robot_large_base_urdf/: CMakeLists.txt  package.xml
src/simulacao/butter_robot_v2/: CMakeLists.txt  package.xml
src/simulacao/butter_robot_v2/config/: joint_names_butter_robot_v2.yaml
src/simulacao/butter_robot_v2/launch/: butter.launch  butter_scenario.launch  butter_scenario_wheel_test.launch  butter_scenario_whell_test.launch  display.launch  gazebo.launch  webots.launch
src/simulacao/butter_robot_v2/meshes/: base_link.STL  body_Link.STL  cam_Link.STL  left_arm_Link.STL  left_elbow_Link.STL  left_hand_Link.STL  left_shoulder_Link.STL  right_arm_Link.STL  right_elbow_Link.STL  right_hand_Link.STL  right_shoulder_Link.STL  wheel_Link_1.STL  wheel_Link_2.STL  wheel_Link_3.STL  wheel_Link_4.STL
src/simulacao/butter_robot_v2/protos/: .ButterRobotV2.cache  ButterRobotV2.proto
src/simulacao/butter_robot_v2/urdf/: butter_robot_v2.csv  butter_robot_v2.urdf
src/simulacao/butter_robot_v2/urdf/outputFile/: ButterRobotV2.proto
src/simulacao/butter_robot_v2/worlds/: .butter_word.wbproj  .butter_word_complete.wbproj  .butter_word_wheel_test.wbproj  .butter_word_whell_test.wbproj  butter_word.wbt  butter_word_wheel_test.wbt
src/simulacao/butter_v33/: CMakeLists.txt  package.xml
src/simulacao/simulacao_cosmeticos/: butter_and_container_to_webots.wbo  butter_and_container_to_webots_v2.wbo  butter_and_container_to_webots_v3.wbo  butter_robot.wbo  butter_to_webots.wbo  butter_to_webots_v2.wbo  butter_v4.mtl  container_and_butter_v1.mtl  container_v1.mtl  container_v2.mtl  container_v3.mtl  editable_butter.blend  editable_butter.blend1  editable_butter_1.blend  editable_butter_2.blend  morty_scaled.mtl  ricky_scaled.mtl
src/visao/: README.md  comando  data_augmentation.py  getting_frames.py  getting_frames_and_inferencing.py  getting_training_txt_file.py  media.txt  passos.txt  recording_from_camera.py  renaming - eval.py  renaming - train.py  renaming - val.py  running_inference.py  train.txt  valid.txt
src/visao/Ensaio Fotográfico/: choosing_train_val_eval.py  (+4 more)
src/visao/Ensaio Fotográfico 2/: choosing_train_val_eval.py  divisao de imagens  renaming - all.py
src/visao/Ensaio Fotográfico 2 - Reforço Longe e Perto/: choosing_train_val_eval.py  divisao de imagens  renaming - all.py  split-video-by-frame.py
(+1195 files in other folders)
