<?xml version="1.0"?>
<package>
  <name>robot_moves</name>
  <version>1.0.0</version>
  <description>The robot_moves package</description>

  <maintainer email="lipemenezescosta@gmail.com">Luis</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
